2025-08-03T02:36:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16700260918 # 1137
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-03
* notice: last 14d: unq all: 9 74
* notice: prev accum: outdated-unq outdated-all / unq all: 1145 5708 / 1156 5780
* notice: next accum: outdated-unq outdated-all / unq all: 1145 5708 / 1158 5782
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2025-08-02]

2025-08-02T12:54:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16693821841 # 1136
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-02
* notice: last 14d: unq all: 7 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1145 5708 / 1155 5779
* notice: next accum: outdated-unq outdated-all / unq all: 1145 5708 / 1156 5780
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-02]

2025-08-01T12:59:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16675712294 # 1134
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-01
* notice: last 14d: unq all: 7 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1145 5708 / 1154 5778
* notice: next accum: outdated-unq outdated-all / unq all: 1145 5708 / 1155 5779
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-01]

2025-07-31T12:59:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16649666045 # 1132