@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-03T02:36:17Z",
+  "timestamp" : "2025-08-03T12:57:20Z",
   "count_outdated" : 5708,
   "uniques_outdated" : 1145,
-  "count" : 5782,
-  "uniques" : 1158,
+  "count" : 5790,
+  "uniques" : 1159,
   "views" : [
     {
       "timestamp": "2025-07-23T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-08-03T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
