@@ -1,6 +1,6 @@
 {
-  "count": 74,
-  "uniques": 9,
+  "count": 82,
+  "uniques": 10,
   "views": [
     {
       "timestamp": "2025-07-23T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2025-08-02T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-08-03T00:00:00Z",
+      "count": 8,
+      "uniques": 1
     }
   ]
 }
